--- a/Modeling/syllabus/Schelling.Rmd
+++ b/Modeling/syllabus/Schelling.Rmd
@@ -33,7 +33,7 @@ Household groups are then determined randomly :  the cell value is chosen betwee
 
 
 ```{r setupState}
-size <- 10 
+size <- 100
 pctOccupied <- 0.5
 pctRed <- 0.5
 pctBlue <- (1-pctRed)
@@ -55,11 +55,11 @@ Display is achived by the **ggplot** library, a kind of wierd and fucked-up piec
 For the record, we give the non-ggplot version first, using the `image` function. 
 N.B. matrix plot is counter-clockwise rotated by an angle of pi/2 ; here we don't care as there is no orientation problems in this theoretic example. 
 ```{r displaySimple,fig.height=6, fig.width=6}
-library(Matrix)
+par(fin=c(6,6))
 image(state, axes = FALSE,col=c("red","blue"))
 ```
 
-This is beacause, by convention, we "naturally" draw __rows__ of a matrix along what would be the Y-axis of a plot. 
+This is beacause, by convention, we "naturally" draw *rows* of a matrix along what would be the Y-axis of a plot. 
 According to the documentation : 
 
 > `image` interpret matrix as a table of f(x[i], y[j]) values, so that the x axis corresponds to row number and the y axis to >column number, with column 1 at the bottom, i.e. a 90 degree counter-clockwise rotation of the conventional printed layout of a matrix.
@@ -88,13 +88,12 @@ colorMapping <- c("1"="red", "2"="blue")
 
 myggplot <- ggplot(meltedState, aes(x=Var1, y=Var2)) +
   geom_raster(aes(fill=factor(value)))+
- scale_colour_manual(values = colorMapping)+
+ scale_fill_manual(values = colorMapping)+
   theme_void()
 myggplot            
 
 ```
 
-TODO fix color not red nor blue
 
 ## Dynamics
 
